--- a/blogapp/blog/templates/blog/blog-details.html
+++ b/blogapp/blog/templates/blog/blog-details.html
@@ -21,7 +21,7 @@
                                 <p class="card-text">{{ blog.description|safe }}</p>
 
                                 <!-- is basvurusu yapmak icin gerekli alanları doldurmasını bekliyorum.-->
-                                <form method="POST">
+                                <form action="" method="POST">{% csrf_token %}
 
                                     {% if error %}
                                     <div class="alert alert-danger">
@@ -31,17 +31,15 @@
 
                                     <div class="mb-3">
                                         <label for="exampleFormControlInput1" class="form-label">E-mail Adresinizi Giriniz</label>
-                                        <input type="email" class="form-control" id="emailtext" placeholder="isim@ornekmail.com" name="emailtext" value={{emailtext}} >
-                                    </div>
-                                    <div class="mb-3">
+                                        <input type="text" class="form-control" id="emailtext" placeholder="isim@ornekmail.com" name="email" value={{emailtext}} >
                                         <label for="exampleFormControlTextarea1" class="form-label">Ön Yazı Ekleyiniz</label>
-                                        <textarea class="form-control" id="onyazitext"  rows="3" name="onyazitext" value={{onyazitext}}></textarea>
+                                        <textarea class="form-control" id="onyazitext"  rows="3" name="onyazi" value={{onyazitext}}></textarea>
                                     </div>
 
-                                    </div>
+
                                     <div class="mb-2">
                                     <label for="formFileMultiple" class="form-label">Lütfen CV'nizi Yükleyiniz</label>
-                                    <input class="form-control" type="file" id="cvFile" multiple name="cvFile" value={{cvFile}}>
+                                    <input class="form-control" type="file" id="cvFile" multiple name="cv" value={{cvFile}}>
                                     </div>
                                     
 
